<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainActivity">



    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/ic_background_list"
        android:backgroundTint="#B35E9CBF"
        android:id="@+id/rv_shop_list"
        app:layout_constraintBottom_toTopOf="@id/cv_sum_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_shop_enabled"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/add_new_shop_item"
        android:foreground="@drawable/ic_add"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sum_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/background_title_color"
            android:padding="5dp">
            <TextView
                android:textSize="20sp"
                android:text="@string/text_sum_field"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_sum_field"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:layout_weight="6"
                android:text="@string/default_text_sum_field"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>